# browsergame

BrowserGame/: .gitignore  CMakeLists.txt  Logger.h  MainApplication.cpp  MainApplication.h  MapContainer.cpp  MapContainer.h  main.cpp
BrowserGame/Bootstrap/: Bootstrap5ThemeKeys.cpp  Bootstrap5ThemeKeys.h  NavTabs.h  inlinestyle.h
BrowserGame/MongoCore/: ListItemNoDB.h  MongoCore.cpp  MongoCore.h  db.cpp  db.h  item.cpp  item.h  listitem.h  mongoheaders.h
BrowserGame/quill/linux/lib/cmake/quill/: quill-config-version.cmake  quill-targets.cmake
BrowserGame/quill/linux/pkgconfig/: quill.pc
BrowserGame/quill/win/lib/cmake/quill/: quill-config-version.cmake  quill-targets.cmake
